--- a/client_sw/.gitignore
+++ b/client_sw/.gitignore
@@ -2,3 +2,12 @@
 /dist/
 /build/
 /test.log
+/TaskRun.pyo
+/PrizeModule.pyo
+/lte50845.cw127.pkl
+/lte50845.pkl
+/lte50845.ttf
+/flamenn_0.pkl
+/flamenn_0.ttf
+/hobo.pkl
+/hobo.ttf
