--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -3,6 +3,7 @@ encoding//DinoPay/DinoPay.py=latin1
 encoding//DinoPay/db/dbpayif.py=utf-8
 encoding//Modules/AdamModule/adam.py=utf-8
 encoding//Modules/DinoDB/dinoDBif.py=utf-8
+encoding//Modules/MQTTModule/Dino_MQTT.py=utf-8
 encoding//Modules/tools/Internettools.py=utf-8
 encoding//client_sw/customprinter/custom.py=utf-8
 encoding//client_sw/customprinter/receiptrenderer.py=UTF-8
